feat: add config file support for non-interactive mode
- Add --config/-c flag to skip wizard and use JSON config file
- Create src/config/ module with Zod schema validation
- Add runFromConfig() function for non-interactive project generation
- Add example config files in examples/ directory
- Fix install.sh tmp_dir unbound variable and mise trust issues
- Fix attw CJS resolution warning (ignore for CLI-only package)
- Fix actionlint CI job (use direct install instead of missing action)
- Update repository URLs to jvalentini/bakery
- Bump version to 0.2.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,8 +89,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
+      - name: Install actionlint
+        run: |
+          bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash)
+
       - name: Run actionlint
-        uses: rhysd/actionlint-action@v1
+        run: ./actionlint
 
   security:
     name: Security Scan
