fix: fix template TypeScript errors and add archetype validation
- Fix effect-full-stack: remove cross-package import, add local Message type
- Fix api-express: change return pattern for TypeScript noImplicitReturns
- Fix api-elysia: use status() instead of error() for Elysia 1.2+ API
- Fix full-stack templates: add @types/bun, fix Express typing, unused vars
- Add Convex stub types for typecheck before codegen
- Add validation script and smoke tests for all archetypes
- Rename example configs to match archetype names
- Add CI job for quick validation, release gate for full validation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,6 +133,23 @@ jobs:
           trivy-config: trivy.yaml
           format: 'table'
 
+  validate-archetypes:
+    name: Validate Archetypes (Quick)
+    runs-on: ubuntu-latest
+    needs: quality
+    permissions:
+      contents: read
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Setup Bun with cache
+        uses: ./.github/actions/setup-bun
+
+      - name: Validate archetypes (quick tier)
+        run: bun run validate:quick
+
   build:
     name: Build Check
     runs-on: ubuntu-latest
