--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,29 @@ permissions:
   packages: write
 
 jobs:
+  validate-archetypes:
+    name: Validate All Archetypes
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      - name: Validate archetypes (full tier)
+        run: bun run validate:full
+
   build:
     name: Build ${{ matrix.target }}
     runs-on: ubuntu-latest
+    needs: validate-archetypes
     strategy:
       matrix:
         target:
@@ -90,7 +110,7 @@ jobs:
   release:
     name: Create Release
     runs-on: ubuntu-latest
-    needs: [build, docker]
+    needs: [validate-archetypes, build, docker]
 
     steps:
       - name: Checkout code
