--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "test": "bun test",
     "test:watch": "bun test --watch",
     "test:coverage": "bun test --coverage",
+    "validate": "bun run scripts/validate-archetypes.ts",
+    "validate:quick": "bun run scripts/validate-archetypes.ts --tier=quick",
+    "validate:full": "bun run scripts/validate-archetypes.ts --tier=full",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
